@@ -4170,15 +4170,6 @@ a.caltrigger {
 #createWizard .Column.Second #upload-place p {
   padding-top: 25px;
 }
-#createWizard .Column.Second #upload-place input[type="file"] {
-  background-image: url(&dtml-portal_url;/browse-files.png);
-  cursor:pointer;
-  width: 138px;
-  height: 46px;
-  border: none;
-  text-indent: -99999px;
-  padding: 0px!important;
-}
 #createWizard form label,
 #createWizard .label {
   color: rgba(255, 255, 255, 0.8);
@@ -4420,26 +4411,32 @@ a.caltrigger {
 #createWizard .wizard_qq-upload-button-focus {outline:1px dotted black;cursor: pointer !important;}
 
 #createWizard .wizard_qq-upload-button {
-  background: none;
-  display: block;
-  -moz-border-radius: 0px;
-  -webkit-border-radius: 0px;
-  border-radius: 0px;
-  border-bottom: none;
-  color: transparent;
-  padding: 0px;
-  margin: 0px;
-  width: 138px;
-  height: 46px;
-  margin-top: 25px;
-  margin-right: 108px;
-  background-image: url(&dtml-portal_url;/browse-files.png);
-  cursor:pointer;
-  width: 138px;
-  height: 46px;
-  border: none;
-  text-indent: -99999px;
-  padding: 0px!important;
+  border: 1px solid #232D35;
+  border-radius: 5px;
+  box-shadow: 1px 1px 2px #D9D9D9 inset;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  float:none;
+
+  font-size: 1.0em;
+  margin: 25px auto 0 auto;
+  padding: 0 20px !important;
+  height: 44px;
+  line-height: 44px;
+  overflow: hidden;
+  text-align: center;
+  width: auto;
+  z-index: 30;
+
+  background: #9bc061;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#A6D064), color-stop(44%,#82ad3f), color-stop(100%,#679819));
+  background: -o-linear-gradient(top, #A6D064 0%, #91B658 50%, #82ad3f 50%, #679819 100%);
+  background: -ms-linear-gradient(top, #A6D064 0%, #91B658 50%, #82ad3f 50%, #679819 100%);
+  background: linear-gradient(top, #A6D064 0%, #91B658 50%, #82ad3f 50%, #578213);
+  background: -moz-linear-gradient(top, #A6D064 0%, #91B658 50%, #82ad3f 50%, #578213);
+  background: -webkit-gradient(linear, left top, left bottom, from(#A6D064), color-stop(0.50, #91B658), color-stop(0.50, #82ad3f), to(#578213));
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#A6D064', endColorstr='#578213',GradientType=0 );
 }
 
 #createWizard .wizard_qq-files-to-upload {
